src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Case Submission</fullName>
        <description>Used to enter cases for accounts</description>
        <isActive>true</isActive>
        <values>
            <fullName>Active</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Closed - Process change aborted</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>WIP</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Contract Addendum</fullName>
        <description>To track collection on contract addendums</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Executed</fullName>
        </values>
        <values>
            <fullName>Incomplete</fullName>
        </values>
        <values>
            <fullName>Requested</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Returned</fullName>
        </values>
        <values>
            <fullName>Sent</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Contract Renewal</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Active</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Closed - Lost</fullName>
        </values>
        <values>
            <fullName>Closed - Process change aborted</fullName>
        </values>
        <values>
            <fullName>Closed- Won</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Corporate</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Active</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>WIP</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Counseling Services</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Active</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Employer Community Request</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Active</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Implementation</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Closed - Process change aborted</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>Hold</fullName>
        </values>
        <values>
            <fullName>Implemented - Full Launch</fullName>
        </values>
        <values>
            <fullName>Implemented - Partial Launch</fullName>
        </values>
        <values>
            <fullName>Pending</fullName>
        </values>
        <values>
            <fullName>Pipeline</fullName>
        </values>
        <values>
            <fullName>Target</fullName>
        </values>
        <values>
            <fullName>WIP</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <fields>
        <fullName>ASA_Activation_Email__c</fullName>
        <label>ASA Launch Email</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_Email__c</fullName>
        <label>Account Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Account_Server_URL__c</fullName>
        <label>Account Server URL</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Team_Meeting__c</fullName>
        <label>Account Team Meeting</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Activation_Materials_Requested__c</fullName>
        <label>Engagement Materials Requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Activation_Materials_Sent__c</fullName>
        <label>Engagement Materials Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Activation_Plan_to_Client__c</fullName>
        <label>Engagement Plan to Client</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Activation_Process__c</fullName>
        <label>Engagement Process?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Actual_Alumni_SALT_Connect_Date__c</fullName>
        <label>(Alumni) SALT Connect Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Enrolled_SALT_Connect_Date__c</fullName>
        <label>(Enrolled) SALT Connect Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Go_Live_Date_EDMS__c</fullName>
        <label>Actual Go-Live Date - EDMS</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Go_Live_Date__c</fullName>
        <label>Go-Live Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Topics__c</fullName>
        <description>Used by the counselor to select one or many topics covered with the Contact.</description>
        <inlineHelpText>Select one or many topics covered with the Contact.</inlineHelpText>
        <label>Actual Topics</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>College planning/paying for college (parents and students)</fullName>
                </value>
                <value>
                    <fullName>Beginning student loan repayment</fullName>
                </value>
                <value>
                    <fullName>Comparing_repayment_plans_and_or_postponing_payments</fullName>
                </value>
                <value>
                    <fullName>Consolidation and refinance</fullName>
                </value>
                <value>
                    <fullName>Resolving delinquent student loans</fullName>
                </value>
                <value>
                    <fullName>Forgiveness for student loans</fullName>
                </value>
                <value>
                    <fullName>General student loan information</fullName>
                </value>
                <value>
                    <fullName>General financial information (budgeting, credit, saving, etc.)</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BOS_Set_Up__c</fullName>
        <label>BOS Set Up</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In-Progress</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BPMS_Create_Initiatives__c</fullName>
        <label>BPMS: Create Initiatives</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Intro</fullName>
                </value>
                <value>
                    <fullName>Delinquency</fullName>
                </value>
                <value>
                    <fullName>Repayment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BPMS_Profile_Creation_Date__c</fullName>
        <description>Date the BPMS profile is complete</description>
        <label>BPMS Profile Creation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Barrier__c</fullName>
        <label>Secondary Barrier Reasons</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Implementation Call</fullName>
                </value>
                <value>
                    <fullName>Connect Date NOT Set</fullName>
                </value>
                <value>
                    <fullName>Demographic File and NSLDS Access</fullName>
                </value>
                <value>
                    <fullName>Demographic File</fullName>
                </value>
                <value>
                    <fullName>NSLDS Access</fullName>
                </value>
                <value>
                    <fullName>Lack Of Campus Support</fullName>
                </value>
                <value>
                    <fullName>Connect Date in Future</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Barrier_to_Implementation__c</fullName>
        <inlineHelpText>Select the value that best describes the primary reason for Barrier to Implementation.</inlineHelpText>
        <label>Barrier to Implementation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Implementation Call</fullName>
                </value>
                <value>
                    <fullName>Connect Date Not Set</fullName>
                </value>
                <value>
                    <fullName>Demographic File and NSLDS Access</fullName>
                </value>
                <value>
                    <fullName>Demographic File</fullName>
                </value>
                <value>
                    <fullName>NSLDS Access</fullName>
                </value>
                <value>
                    <fullName>Lack of Campus Support</fullName>
                </value>
                <value>
                    <fullName>Connect Date In Future</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billing_Set_Up_Form__c</fullName>
        <label>Billing Set Up Form</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Borrower_Population__c</fullName>
        <label>Borrower Populations: Entered Repayment</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Existing: Prior to 10/1/2009</fullName>
                </value>
                <value>
                    <fullName>New: 10/1/2009 - 9/30/2010 or later</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Branch_Codes__c</fullName>
        <label>Branch Codes</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Impact__c</fullName>
        <description>This field indicates the impact that this testing will have on the business; BD, Ops, LSR and Call Center.</description>
        <label>Business Impact</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Minor</fullName>
                </value>
                <value>
                    <fullName>Moderate</fullName>
                </value>
                <value>
                    <fullName>Major</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CM_SALT_Member_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>A check in this field indicates the Client Manager has established a SALT account for this client.</inlineHelpText>
        <label>CM SALT Member Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Campus_Activation_Visit__c</fullName>
        <label>Campus Engagement Visit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Campus_re_engagement_meeting__c</fullName>
        <label>Campus re-engagement meeting</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Client_Ad_on_SALT__c</fullName>
        <label>Client Ad on SALT</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Small</fullName>
                </value>
                <value>
                    <fullName>Large</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Onboarding_Folder_Set_Up_Status__c</fullName>
        <label>Client Onboarding Folder Set Up Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Portal_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>A check in this field indicates the customer established has an account on the Client Portal.</inlineHelpText>
        <label>Client Portal Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_SALT_Access_granted__c</fullName>
        <description>The Date that client received access to saltmoney.org</description>
        <inlineHelpText>access to saltmoney.org</inlineHelpText>
        <label>Client SALT Access granted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Closed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Closed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Co_Branded_Communications__c</fullName>
        <label>Co-Branded Communications</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes - Intiated</fullName>
                </value>
                <value>
                    <fullName>Yes – Completed</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Co_Branded_Website__c</fullName>
        <label>Co-Branded Website</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes - Intiated</fullName>
                </value>
                <value>
                    <fullName>Yes - Completed</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Collateral_Setup__c</fullName>
        <label>Collateral Setup</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>WIP</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comm_Materials_Sent__c</fullName>
        <label>Comm Materials Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Comm_Mktg_Materials_Requested__c</fullName>
        <label>Comm Mktg Materials Requested</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>URL</fullName>
                </value>
                <value>
                    <fullName>Email Copy</fullName>
                </value>
                <value>
                    <fullName>Letter Copy</fullName>
                </value>
                <value>
                    <fullName>Fliers</fullName>
                </value>
                <value>
                    <fullName>Print Ad</fullName>
                </value>
                <value>
                    <fullName>Banner Ad</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Communications_Calendar__c</fullName>
        <description>Date Communications Calendar is delivered to Client</description>
        <label>Communications Calendar Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Confidentiality_Agreement_Status__c</fullName>
        <label>Confidentiality Agreement Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_End_Date__c</fullName>
        <formula>Account.Contract_End__c</formula>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Start_Date__c</fullName>
        <formula>Account.Contract_Start__c</formula>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_requested__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contract requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Count_Down__c</fullName>
        <formula>IF(ISPICKVAL(Status,&quot;WIP&quot;),
  (60 + Contract_Start_Date__c) -(today()),NULL)</formula>
        <inlineHelpText>This field calculates the number of days remaining for the Implementation to complete while the Status = WIP.  The standard is 60 days.</inlineHelpText>
        <label>Count Down</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CustomerType__c</fullName>
        <formula>TEXT( Account.SALT_Product_Focus__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Code__c</fullName>
        <formula>Account.Customer_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_ID__c</fullName>
        <label>Customer ID</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Type__c</fullName>
        <label>Deprecated Customer Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Charter</fullName>
                </value>
                <value>
                    <fullName>Fee for Service</fullName>
                </value>
                <value>
                    <fullName>State Agency</fullName>
                </value>
                <value>
                    <fullName>School</fullName>
                </value>
                <value>
                    <fullName>Lender</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>For-Profit</fullName>
                </value>
                <value>
                    <fullName>Strategic Partner</fullName>
                </value>
                <value>
                    <fullName>Foundation</fullName>
                </value>
                <value>
                    <fullName>Sponsor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Digitial_Welcome_Guide_Sent__c</fullName>
        <label>Date Digitial Welcome Guide Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Welcome_Guide_Sent__c</fullName>
        <label>Date Welcome Guide Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_to_Send_SALT_Intro_Letter__c</fullName>
        <label>Date to Send SALT Intro Letter</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delinquency_Cohorts__c</fullName>
        <label>Delinquency Cohorts</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2011</fullName>
                </value>
                <value>
                    <fullName>2012</fullName>
                </value>
                <value>
                    <fullName>2013</fullName>
                </value>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Demog_File_Processed_Date__c</fullName>
        <label>Demog File Processed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Demog_File_Received_Date__c</fullName>
        <label>Demog File Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Demog_File_Status__c</fullName>
        <label>Demog File Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>WIP</fullName>
                </value>
                <value>
                    <fullName>Testing</fullName>
                </value>
                <value>
                    <fullName>Validated</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Demog_Template_Sent__c</fullName>
        <label>Demog Template Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dest_Address__c</fullName>
        <description>This is the destination account for all outbound CommonLine or CR:C files to customers.</description>
        <label>Destination Address</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EDMS_Activated__c</fullName>
        <description>This is when the EDMS profile has been updated so communciations can begin.</description>
        <inlineHelpText>THis is when the EDMS profile has been updated so communciations can begin.</inlineHelpText>
        <label>EDMS Activated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EDMS_Custom_On_Board_Email__c</fullName>
        <label>EDMS Custom On Board Email</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EDM_Communication_Executed__c</fullName>
        <description>This is when the first EDM communication has been sent.</description>
        <label>EDM Communication Executed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email2Case_TO_Address__c</fullName>
        <description>Storing the email address associated with organisation-wide-address, If the record is created via &quot;Email-to-case&quot;</description>
        <label>Email2Case TO Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Estimated_Go_Live_Date__c</fullName>
        <label>Estimated Go-Live Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_Go_Live_EDMS__c</fullName>
        <label>Expected Go-Live EDMS</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_Go_Live_MM_101__c</fullName>
        <label>Expected Go-Live SALT Courses</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FAMS_Sign_off__c</fullName>
        <label>Feed File Handler Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pre-Testing</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>In Testing</fullName>
                </value>
                <value>
                    <fullName>In Production</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>File_Format__c</fullName>
        <label>File Format</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>XML</fullName>
                </value>
                <value>
                    <fullName>Excel</fullName>
                </value>
                <value>
                    <fullName>CSV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>File_Source__c</fullName>
        <label>File Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>School</fullName>
                </value>
                <value>
                    <fullName>Servicer</fullName>
                </value>
                <value>
                    <fullName>ASA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>File_Type__c</fullName>
        <label>File Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>File_Source__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>DELQ</fullName>
                </value>
                <value>
                    <fullName>DER</fullName>
                </value>
                <value>
                    <fullName>DEMOG</fullName>
                </value>
                <value>
                    <fullName>ACS</fullName>
                </value>
                <value>
                    <fullName>AES</fullName>
                </value>
                <value>
                    <fullName>Sallie Mae</fullName>
                </value>
                <value>
                    <fullName>Nelnet</fullName>
                </value>
                <value>
                    <fullName>Great Lakes</fullName>
                </value>
                <value>
                    <fullName>Citibank</fullName>
                </value>
                <value>
                    <fullName>Mohela</fullName>
                </value>
                <value>
                    <fullName>ECSI</fullName>
                </value>
                <value>
                    <fullName>Wells Fargo</fullName>
                </value>
                <value>
                    <fullName>XLS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>File_Type_s_ASA_Source__c</fullName>
        <label>File Type(s): ASA Source</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ACS</fullName>
                </value>
                <value>
                    <fullName>AES</fullName>
                </value>
                <value>
                    <fullName>Sallie Mae</fullName>
                </value>
                <value>
                    <fullName>Nelnet</fullName>
                </value>
                <value>
                    <fullName>Great Lakes</fullName>
                </value>
                <value>
                    <fullName>Citibank</fullName>
                </value>
                <value>
                    <fullName>Mohela</fullName>
                </value>
                <value>
                    <fullName>ECSI</fullName>
                </value>
                <value>
                    <fullName>Wells Fargo</fullName>
                </value>
                <value>
                    <fullName>XLS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>File_Type_s_School_Source__c</fullName>
        <label>File Type(s): School Source</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DELQ</fullName>
                </value>
                <value>
                    <fullName>DER</fullName>
                </value>
                <value>
                    <fullName>DEMOG</fullName>
                </value>
                <value>
                    <fullName>ACS</fullName>
                </value>
                <value>
                    <fullName>AES</fullName>
                </value>
                <value>
                    <fullName>Sallie Mae</fullName>
                </value>
                <value>
                    <fullName>Nelnet</fullName>
                </value>
                <value>
                    <fullName>Great Lakes</fullName>
                </value>
                <value>
                    <fullName>Citibank</fullName>
                </value>
                <value>
                    <fullName>Mohela</fullName>
                </value>
                <value>
                    <fullName>ECSI</fullName>
                </value>
                <value>
                    <fullName>Wells Fargo</fullName>
                </value>
                <value>
                    <fullName>XLS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>File_Type_s_Servicer_Source__c</fullName>
        <label>File Type(s): Servicer Source</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ACS</fullName>
                </value>
                <value>
                    <fullName>AES</fullName>
                </value>
                <value>
                    <fullName>Sallie Mae</fullName>
                </value>
                <value>
                    <fullName>Nelnet</fullName>
                </value>
                <value>
                    <fullName>Great Lakes</fullName>
                </value>
                <value>
                    <fullName>Citibank</fullName>
                </value>
                <value>
                    <fullName>Mohela</fullName>
                </value>
                <value>
                    <fullName>ECSI</fullName>
                </value>
                <value>
                    <fullName>Wells Fargo</fullName>
                </value>
                <value>
                    <fullName>XLS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>